k8s/depl_svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hodadoc-deployment
  namespace: hodadoc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-hodadoc
  template:
    metadata:
      labels:
        app: my-hodadoc
    spec:
      containers:
      - name: my-hodadoc
        image: 346903264902.dkr.ecr.ap-northeast-2.amazonaws.com/hodadoc
        ports:
        - containerPort: 8080
        resources:
        # 컨테이너가 사용할수 있는 리소스의 최대치
          limits:
            cpu: "1"
            memory: "1Gi"
        # 컨테이너가 시작될때 보장받아야 하는 최소 자원
          requests:
            cpu: "0.5"
            memory: "512Mi"
        readinessProbe:
          httpGet:
            # healthcheck 경로
            path: /health
            port: 8080
          # 컨테이너 시작 후 지연
          initialDelaySeconds: 90
          # 확인 반복 주기
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: hodadoc-service
  namespace: hodadoc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: my-hodadoc
