k8s/ingress.yml
# ingress-controller 설치 명령어
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.1/deploy/static/provider/aws/deploy.yaml
# aws lb -> ingress controller pod -> ingress -> service로의 라우팅

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hodadoc-ingress
  namespace: hodadoc
  annotations:
    kubernetes.io/ingress.class: nginx
    # SSE 타임아웃 설정 추가
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"        # SSE는 버퍼링 끄기
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"     # HTTP/1.1 강제
spec:
  tls:
  - hosts:
    - "server.hodadoc.littleniddle.store"
    secretName: server-hodadoc-littleniddle-store-tls
  rules:
  - host: server.hodadoc.littleniddle.store
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hodadoc-service
            port:
              number: 80
